--- a/cesium-ion-revit/Properties/Resources.resx
+++ b/cesium-ion-revit/Properties/Resources.resx
@@ -130,6 +130,12 @@
   <data name="Cesium32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\resources\cesium-32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="HelpButtonDescription" xml:space="preserve">
+    <value>Resources and tutorials for how to use Cesium ion in Revit</value>
+  </data>
+  <data name="HelpButtonLabel" xml:space="preserve">
+    <value>Help</value>
+  </data>
   <data name="IonAPIURL" xml:space="preserve">
     <value>https://api.cesium.com/</value>
   </data>
@@ -141,6 +147,18 @@
   </data>
   <data name="IonURL" xml:space="preserve">
     <value>https://cesium.com/ion/</value>
+  </data>
+  <data name="LoginButtonDescription" xml:space="preserve">
+    <value>Authorize your Cesium ion account for Revit</value>
+  </data>
+  <data name="LoginButtonLabel" xml:space="preserve">
+    <value>Sign In</value>
+  </data>
+  <data name="LogoutButtonDescription" xml:space="preserve">
+    <value>Remove your Cesium ion account from Revit</value>
+  </data>
+  <data name="LogoutButtonLabel" xml:space="preserve">
+    <value>Sign Out</value>
   </data>
   <data name="RibbonLabel" xml:space="preserve">
     <value>Cesium ion</value>
